<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context="Fragments.Select_Registration_fragment">




    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/logo"
        android:layout_width="250dp"
        android:layout_height="200dp"
        android:src="@drawable/old_phone"
        android:layout_gravity="center"/>

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_to_mishan"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:textColor="#000"/>

    <TextView
        android:id="@+id/title2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_one"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:textSize="23sp"
        android:gravity="center"
        android:textColor="#000"/>


    <Button
        android:id="@+id/residentRegistration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/resident_registration"
        android:textSize="20sp"
        android:layout_margin="10dp"
        android:layout_gravity="center"
        android:textAllCaps="false"
        android:textColor="#fff"
        android:background="@drawable/buttons_background"/>

    <Button
        android:id="@+id/volunteerRegistration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/volunteer_registration"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:layout_margin="10dp"
        android:layout_gravity="center"
        android:textColor="#fff"
        android:background="@drawable/buttons_background"/>

    <TextView
        android:id="@+id/back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/already_have_an_account_login"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:textColor="#000"
        android:textSize="17sp"
        android:gravity="center"/>
    




</LinearLayout>