<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="Fragments.Volunteer_registration_fragment"
    android:padding="20dp">

    <LinearLayout
        android:id="@+id/volunteerRegistrationScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/mishan_eng"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/title3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/volunteer_registration"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:textColor="#000"/>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profileImage"
            app:civ_border_width="2dp"
            android:layout_width="150dp"
            android:layout_height="150sp"
            android:layout_marginTop="10dp"
            android:src="@drawable/profile_image"
            android:layout_gravity="center"
            app:civ_border_color="#4A000000"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxStrokeColor="#000"
            android:layout_marginTop="20dp"
            android:theme="@style/TextInputLayoutStyle"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            app:hintTextAppearance="@color/design_default_color_primary">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/registrationFullname"
                android:hint="@string/enter_your_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_profile"
                android:drawablePadding="10dp"
                android:textColor="#000"
                android:textSize="18sp"
                android:textColorHint="#000"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxStrokeColor="#000"
            android:layout_marginTop="20dp"
            android:theme="@style/TextInputLayoutStyle"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            app:hintTextAppearance="@color/design_default_color_primary">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/registrationPhoneNumber"
                android:hint="@string/enter_your_phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_phone"
                android:drawablePadding="10dp"
                android:inputType="number"
                android:textColor="#000"
                android:textSize="18sp"
                android:textColorHint="#000"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxStrokeColor="#000"
            android:layout_marginTop="20dp"
            android:theme="@style/TextInputLayoutStyle"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            app:hintTextAppearance="@color/design_default_color_primary">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/registrationAddress"
                android:hint="@string/enter_your_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_address"
                android:drawablePadding="10dp"
                android:textColor="#000"
                android:textSize="18sp"
                android:textColorHint="#000"/>

        </com.google.android.material.textfield.TextInputLayout>

<!--        <Spinner-->
<!--            android:id="@+id/daysAvailabilitySpinner"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_gravity="center"-->
<!--            android:gravity="center"-->
<!--            android:popupBackground="#fff"-->
<!--            android:entries="@array/dayframes"-->
<!--            android:layout_marginStart="9dp"-->
<!--            android:layout_marginTop="20dp"-->
<!--            android:layout_marginBottom="10dp"/>-->

<!--        <Spinner-->
<!--            android:id="@+id/timeAvailabilitySpinner"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_gravity="center"-->
<!--            android:gravity="center"-->
<!--            android:popupBackground="#fff"-->
<!--            android:entries="@array/timeframes"-->
<!--            android:layout_marginStart="9dp"-->
<!--            android:layout_marginTop="20dp"-->
<!--            android:layout_marginBottom="0dp"/>-->

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxStrokeColor="#000"
            android:layout_marginTop="20dp"
            android:theme="@style/TextInputLayoutStyle"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            app:hintTextAppearance="@color/design_default_color_primary">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/registrationEmail"
                android:hint="@string/enter_your_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_mail"
                android:drawablePadding="10dp"
                android:inputType="textEmailAddress"
                android:textColor="#000"
                android:textSize="18sp"
                android:textColorHint="#000"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxStrokeColor="#000"
            android:layout_marginTop="20dp"
            android:theme="@style/TextInputLayoutStyle"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            app:hintTextAppearance="@color/design_default_color_primary">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/loginPassword"
                android:hint="@string/enter_your_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_lock"
                android:drawablePadding="10dp"
                android:inputType="textPassword"
                android:textColor="#000"
                android:textSize="18sp"
                android:textColorHint="#000"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/regButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register_now"
            android:layout_margin="15dp"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:textAllCaps="false"
            android:textColor="#fff"
            android:background="@drawable/buttons_background"/>

        <TextView
            android:id="@+id/regPageQuestion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/already_have_an_account_login"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="30dp"
            android:layout_gravity="center"
            android:textColor="#000"
            android:textSize="17sp"
            android:gravity="center"/>


    </LinearLayout>



</ScrollView>