<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="Fragments.Services_registration"
    android:padding="20dp">


    <LinearLayout
        android:id="@+id/serviceRegistrationScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/mishan_eng"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/adding_service"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:textColor="#000"/>



        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxStrokeColor="#000"
            android:layout_marginTop="20dp"
            android:theme="@style/TextInputLayoutStyle"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            app:hintTextAppearance="@color/design_default_color_primary">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/serviceRegistrationName"
                android:hint="@string/enter_service_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_service"
                android:drawablePadding="10dp"
                android:textColor="#000"
                android:textSize="18sp"
                android:textColorHint="#000"/>

        </com.google.android.material.textfield.TextInputLayout>



        <Button
            android:id="@+id/addButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_now"
            android:layout_margin="15dp"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:textAllCaps="false"
            android:textColor="#fff"
            android:background="@drawable/buttons_background"/>

<!--        <TextView-->
<!--            android:id="@+id/regPageQuestion"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="@string/already_have_an_account_login"-->
<!--            android:layout_marginTop="10dp"-->
<!--            android:layout_marginBottom="30dp"-->
<!--            android:layout_gravity="center"-->
<!--            android:textColor="#000"-->
<!--            android:textSize="17sp"-->
<!--            android:gravity="center"/>-->


    </LinearLayout>




</ScrollView>